--- a/package.json
+++ b/package.json
@@ -3,6 +3,27 @@
   "name": "pulse-nightclub-portal",
   "version": "1.0.0",
   "private": true,
-  "description": "Premium Luxury Nightclub Reservation Portal",
-  "dependencies": {}
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.460.0",
+    "recharts": "^2.13.3",
+    "@supabase/supabase-js": "^2.46.1",
+    "html-to-image": "^1.11.11",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.1"
+  }
 }
